log
Wed 20 Mar 2024 07:28:14 PM UTC: 
 tests:  0|5
total_score: 0/70
a8560d2
Wed 20 Mar 2024 07:47:36 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
2e40768
Wed 20 Mar 2024 07:55:00 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:22: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |       acumuladorSuma += dato;
      |                      ^~
cc1: all warnings being treated as errors
Compilation failed
35bd99c
Wed 20 Mar 2024 07:56:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
fc4f67a
Wed 20 Mar 2024 08:03:24 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4fabdb5
Wed 20 Mar 2024 08:36:32 PM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|1
total_score: 50/70
b0f883d
Wed 20 Mar 2024 08:54:09 PM UTC: 
 exercises.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
233c407
Wed 20 Mar 2024 08:56:19 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:59: error: comparison between pointer and integer [-Werror]
  142 |                 ((cadena[i] == ')' && *((char*)top(stack) != '(')) ||
      |                                                           ^~
exercises.c:142:39: error: invalid type argument of unary ‘*’ (have ‘int’)
  142 |                 ((cadena[i] == ')' && *((char*)top(stack) != '(')) ||
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:143:58: error: comparison between pointer and integer [-Werror]
  143 |                 (cadena[i] == ']' && *((char*)top(stack) != '[')) ||
      |                                                          ^~
exercises.c:143:38: error: invalid type argument of unary ‘*’ (have ‘int’)
  143 |                 (cadena[i] == ']' && *((char*)top(stack) != '[')) ||
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:144:58: error: comparison between pointer and integer [-Werror]
  144 |                 (cadena[i] == '}' && *((char*)top(stack) != '{')) ) {
      |                                                          ^~
exercises.c:144:38: error: invalid type argument of unary ‘*’ (have ‘int’)
  144 |                 (cadena[i] == '}' && *((char*)top(stack) != '{')) ) {
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:144:68: error: expected ‘)’ before ‘{’ token
  144 |                 (cadena[i] == '}' && *((char*)top(stack) != '{')) ) {
      |                                                                    ^~
      |                                                                    )
exercises.c:141:16: note: to match this ‘(’
  141 |             if (top(stack) == NULL ||
      |                ^
exercises.c:149:9: error: expected expression before ‘}’ token
  149 |         }
      |         ^
cc1: all warnings being treated as errors
Compilation failed
8609677
Wed 20 Mar 2024 09:01:21 PM UTC: 
 exercises.c | 37 ++++++++++++++++++++-----------------
 1 file changed, 20 insertions(+), 17 deletions(-)
In file included from test.c:5:
exercises.c:162:1: error: expected identifier or ‘(’ before ‘}’ token
  162 | }
      | ^
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:161:5: error: control reaches end of non-void function [-Werror=return-type]
  161 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
3212b55
Wed 20 Mar 2024 09:01:56 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6544460
